// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ULThemeFormMessage Component matches snapshot with SDK error 1`] = `
<form>
  <div
    class="grid"
    data-slot="form-item"
  >
    <div
      aria-live="polite"
      class="flex mb-2 items-center text-sm font-medium theme-universal:text-error"
      role="alert"
    >
      <svg
        aria-hidden="true"
        class="h-4 w-4 mr-1 flex-shrink-0"
        fill="none"
        focusable="false"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M8 14.667A6.667 6.667 0 1 0 8 1.333a6.667 6.667 0 0 0 0 13.334z"
          fill="currentColor"
          fill-rule="evenodd"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
        <path
          clip-rule="evenodd"
          d="M8 4.583a.75.75 0 0 1 .75.75V8a.75.75 0 0 1-1.5 0V5.333a.75.75 0 0 1 .75-.75z"
          fill="white"
          fill-rule="evenodd"
        />
        <path
          d="M8.667 10.667a.667.667 0 1 1-1.334 0 .667.667 0 0 1 1.334 0z"
          fill="white"
        />
      </svg>
      <p
        class="text-destructive text-sm theme-universal:text-error"
      >
        Invalid email format
      </p>
    </div>
  </div>
</form>
`;

exports[`ULThemeFormMessage Component matches snapshot with form validation error 1`] = `
<form>
  <div
    class="grid"
    data-slot="form-item"
  >
    <div
      aria-live="polite"
      class="flex mb-2 items-center text-sm font-medium theme-universal:text-error"
      role="alert"
    >
      <svg
        aria-hidden="true"
        class="h-4 w-4 mr-1 flex-shrink-0"
        fill="none"
        focusable="false"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M8 14.667A6.667 6.667 0 1 0 8 1.333a6.667 6.667 0 0 0 0 13.334z"
          fill="currentColor"
          fill-rule="evenodd"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
        <path
          clip-rule="evenodd"
          d="M8 4.583a.75.75 0 0 1 .75.75V8a.75.75 0 0 1-1.5 0V5.333a.75.75 0 0 1 .75-.75z"
          fill="white"
          fill-rule="evenodd"
        />
        <path
          d="M8.667 10.667a.667.667 0 1 1-1.334 0 .667.667 0 0 1 1.334 0z"
          fill="white"
        />
      </svg>
      <p
        class="text-destructive text-sm theme-universal:text-error"
        data-slot="form-message"
        id="«r1»-form-item-message"
      >
        This field is required
      </p>
    </div>
  </div>
</form>
`;

exports[`ULThemeFormMessage Component matches snapshot with no errors 1`] = `
<form>
  <div
    class="grid"
    data-slot="form-item"
  />
</form>
`;
